Update html tags, fix transition gap, add useMouse hook

--- a/src/components/Background/Background.module.scss
+++ b/src/components/Background/Background.module.scss
@@ -81,7 +81,7 @@ $star-size: 16px;
   .svg {
     position: absolute;
     width: 100%;
-    bottom: 0;
+    bottom: -4px;
     left: 0;
     z-index: 2;
 
